syntax = "proto3";

// (-- api-linter: core::0215::versioned-packages=disabled
//     aip.dev/not-precedent: Support protos for the apigeeregistry.v1 API. --)
package google.cloud.apigeeregistry.v1.apihub;

import "google/api/field_behavior.proto";

option java_package = "com.google.cloud.apigeeregistry.v1.apihub";
option java_multiple_files = true;
option java_outer_classname = "ExtensionsProto";
option go_package = "github.com/apigee/registry/rpc;rpc";

// An ApiSpecExtensionList contains a list of extensions applicable to specs
// stored in the registry
// ApiSpecExtensionList is stored as an Artifact attached to a project.
message ApiSpecExtensionList {
  // Artifact identifier. May be used in YAML representations to indicate the id
  // to be used to attach the artifact.
  string id = 1;

  // Artifact kind. May be used in YAML representations to identify the type of
  // this artifact.
  string kind = 2;

  // A human-friendly name for the ApiSpecExtension list.
  string display_name = 3;

  // A more detailed description of the ApiSpecExtension list.
  string description = 4;

  // Represents a single Extension for an ApiSpec
  message ApiSpecExtension {
    // The id of the Extension
    string id = 1 [(google.api.field_behavior) = REQUIRED];

    // A human-friendly name for the extension
    string display_name = 2 [(google.api.field_behavior) = REQUIRED];

    // A more detailed description of the extension
    string description = 3;

    // A filter expression which evaluates if the extension applies to a spec
    // e.g. mime_type.contains('openapi')
    string filter = 4;

    // A uri pattern used to generate the target url
    string uri_pattern = 5 [(google.api.field_behavior) = REQUIRED];
  }

  // The extensions in the list
  repeated ApiSpecExtension extensions = 5;
}